--- a/config.json
+++ b/config.json
@@ -3,5 +3,6 @@
     "lab2": "192.168.88.21",
     "lab3": "192.168.88.31",
     "lab4": "192.168.88.41",
-    "port": 443
+    "port": 443,
+    "z": "192.168.88.21"
 }
