--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
     "lab2": "192.168.88.21",
     "lab3": "192.168.88.31",
     "lab4": "192.168.88.41",
+    "lab5": "192.168.88.51",
     "port": 443,
-    "z": "192.168.88.21"
+    "z": "192.168.88.41"
 }
