--- a/config.json
+++ b/config.json
@@ -5,5 +5,6 @@
     "lab4": "192.168.88.41",
     "lab5": "192.168.88.51",
     "port": 443,
-    "z": "lab.dorna.ai"
+    "z": "lab.dorna.ai",
+    "furnace": "lab.dorna.ai"
 }
