added gripper calibration to calibration.json added server side logic for reseting nodes to default calibration values added loading circles to each front-end interaction, waiting for response removed hostname differences in default calibration file, all adjustments are now made in calibration.json button handling added for stage 5. Move, will try if sequencing works well in lab should move to source plate, pick up, move to target, place and tell the user what is going along the way, at the same time blocking any further interaction

--- a/config.json
+++ b/config.json
@@ -6,5 +6,6 @@
     "lab5": "192.168.88.51",
     "port": 443,
     "z": "lab.dorna.ai",
+    "xps": "lab.dorna.ai",
     "furnace": "lab.dorna.ai"
 }
